<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo03"
    tools:context=".MainActivity3"
    android:id="@+id/fondo" >

    <io.alterac.blurkit.BlurLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blk_blurRadius="2"
        app:blk_downscaleFactor="0.12"
        app:blk_fps="0"
        />
    <ImageButton
        android:id="@+id/regresar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_baseline_arrow_back_60"
        android:contentDescription="@string/regresar"
        android:elevation="4dp"
        />
    <TextView
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="start"
        android:background="#4f8e83"
        />
    <TextView
        android:id="@+id/contador"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="70dp"
        android:background="@color/gristransparente2"
        android:text="@string/_00_08_03_34"
        android:textAlignment="center"
        android:textSize="45sp"
        android:padding="15dp"
        android:textColor="#FFF"
        />
    <ImageButton
        android:id="@+id/repetir"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/repetir"
        android:backgroundTint="@color/verde3"
        android:clickable="true"
        android:src="@drawable/ic_baseline_repeat_75"
        android:elevation="4dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_record"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="130dp"
        />
    <ImageButton
        android:id="@+id/pause"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/verde3"
        android:clickable="true"
        android:src="@drawable/ic_baseline_pause_80"
        android:contentDescription="@string/pause"
        android:elevation="4dp"
        />
    <ImageButton
        android:id="@+id/siguiente"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/verde3"
        android:clickable="true"
        android:src="@drawable/ic_baseline_skip_next_75"
        android:contentDescription="@string/next"
        android:elevation="4dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="130dp"
        />
</FrameLayout>